# CNFSolver

./: CMakeLists.txt  toolchain-mingw.cmake
include/Algorithms/: BeeHive.hpp  GeneticAlgorithm.hpp  SimulatedAnnealing.hpp
include/Benchmarks/: BenchmarkBH.hpp  BenchmarkBase.hpp  BenchmarkGA.hpp  BenchmarkSA.hpp
include/Core/: AlgorithmBase.hpp  CNF.hpp  Candidate.hpp  Candidates.hpp
include/Enums/: AlgorithmTypes.hpp
include/UI/: BHWindow.hpp  GAWindow.hpp  GraphWindow.hpp  MainWindow.hpp  SAWindow.hpp
include/Utils/: Utils.hpp
src/: main.cpp
src/Algorithms/: BeeHive.cpp  GeneticAlgorithm.cpp  SimulatedAnnealing.cpp
src/Benchmarks/: BenchmarkBH.cpp  BenchmarkBase.cpp  BenchmarkGA.cpp  BenchmarkSA.cpp
src/Core/: CNF.cpp  Candidate.cpp  Candidates.cpp
src/UI/: BHWindow.cpp  GAWindow.cpp  GraphWindow.cpp  MainWindow.cpp  SAWindow.cpp
src/Utils/: Utils.cpp
